--- a/src/main/resources/assets/littletiles/lang/en_US.lang
+++ b/src/main/resources/assets/littletiles/lang/en_US.lang
@@ -8,3 +8,10 @@ item.LTChisel.name=Little Chisel
 item.LTScrewdriver.name=Little Screwdriver
 item.LTRubberMallet.name=Little Rubber Mallet
 item.LTColorTube.name=Little Color Tube
+key.categories.littletiles=Little Tiles
+key.littletiles.flip=Flip
+key.littletiles.mark=Mark
+key.littletiles.rotateup=Rotate Up
+key.littletiles.rotatedown=Rotate Down
+key.littletiles.rotateright=Rotate Right
+key.littletiles.rotateleft=Rotate Left
