--- a/src/main/resources/assets/littletiles/lang/zh_CN.lang
+++ b/src/main/resources/assets/littletiles/lang/zh_CN.lang
@@ -8,3 +8,10 @@ item.LTChisel.name=小凿子
 item.LTScrewdriver.name=小螺丝刀
 item.LTRubberMallet.name=小软锤
 item.LTColorTube.name=小颜料管
+key.categories.littletiles=LT小方块
+key.littletiles.flip=翻转
+key.littletiles.mark=标记
+key.littletiles.rotateup=向上旋转
+key.littletiles.rotatedown=向下旋转
+key.littletiles.rotateright=向右旋转
+key.littletiles.rotateleft=向左旋转
